# brave-performance-predictor

./: BUILD.gn  README.md
python/: .gitignore  config.py  model.py
python/resources/: predictor_parameters.h.tpl
src/: bandwidth_savings_predictor.cc  bandwidth_savings_predictor.h  predictor.cc  predictor.h  predictor_parameters.h  third_parties.h  third_party_extractor.cc  third_party_extractor.h
test/: predictor_unittest.cc  third_party_extractor_unittest.cc
